action bar and add activity page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Agenda EST">
+            android:label="Agenda Est"
+            android:textSize="1sp">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
