--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Agenda_EST">
         <activity
+            android:name=".contacto"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".UpdateActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".contacto" />
         <activity
             android:name=".AddActivity"
             android:exported="false"
@@ -21,9 +25,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Agenda Est"
-            android:textSize="1sp">
-
+            android:label="Agenda Est">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
