--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Agenda_EST">
         <activity
+            android:name=".AddSucess"
+            android:exported="false" />
+        <activity
             android:name=".contacto"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".UpdateActivity"
             android:exported="false"
