Add error messages to add contact

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_agenda"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_agenda_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Agenda_EST">
+        <activity
+            android:name=".AddNoSucess"
+            android:exported="false" />
         <activity
             android:name=".AddSucess"
             android:exported="false" />
